Added validation, error handling, limit query, Swagger updates
